--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,9 @@
+---
+import { ViewTransitions } from 'astro:transitions'
+import AsideMenu from '../components/AsideMenu.astro'
+---
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +11,96 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Spotify Clone</title>
+		<ViewTransitions fallback='none'/>
 	</head>
 	<body>
-		<slot />
+		<div id="app" class="relative h-full p-2 gap-2">
+
+			<header class="[grid-area:header] bg-orange-500 flex-row flex min-h-[48px] ">
+				header
+			</header>
+
+			<aside class="[grid-area:aside] flex-col flex overflow-y-auto rounded-lg bg-[#121212]">
+				<AsideMenu/>
+			</aside>
+
+			<main id="main" class="[grid-area:main] bg-slate-400 rounded-lg overflow-y-auto">
+				<slot />
+			</main>
+
+			<footer  class="[grid-area:player] min-h-[100px] bg-red-300">
+				player
+			</footer>
+		</div>
 	</body>
 </html>
 
 <style>
+	#app {
+		display: grid;
+		grid-template-areas: 
+		"header header header"
+		"aside main main"
+		"player player player";
+		grid-template-columns: 22% 77%;
+		grid-template-rows: auto 1fr auto;
+		width: 100%;
+		
+	}
+
+	#main{
+		background: linear-gradient(to bottom, #0b0b2b 10%, #121212 90%);
+		
+	}
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: black;
+		font-family: 'CircularStd', system-ui, sans-serif;
+		color: white;
+		font-weight: 700;
+
 	}
+	@font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+    }
 </style>
