--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import PlayListItemCard from '@/components/PlayListItemCard.astro';
 			</div>
 			<div class="flex flex-wrap mt-3 gap-4">
 				{
-					playlists.map(playlist => <PlayListItemCard playlist={playlist} />)
+					playlists.map((playlist) => <PlayListItemCard playlist={playlist} />)
 				}
 			</div>
 		</div>
