--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -6,10 +6,11 @@ import PlayListItemCard from '@/components/PlayListItemCard.astro';
 const {id} = Astro.params
 const playlist = allPlaylists.find((playlist) => playlist.id === id)
 const playlistSongs = songs.filter((song) => song.albumId === playlist?.albumId)
+import {SongsTable} from "@/components/SongsTable"
 ---
 
 <Layout>
-	<div id="playlist-container" class="relative flex flex-col h-full overflow-x-hidden" transition:name=`playlist ${id} box`>
+	<div id="playlist-container" class="relative flex flex-col h-full overflow-x-hidden bg-gradient-to-t from-50% from-zinc-900 via-zinc-900/80" transition:name=`playlist ${id} box` style={`background-color: ${playlist?.color.accent}`}>
 		<div class="relative z-10 px-6 flex flex-row w-auto pt-8 pl-10 gap-8">
 			<picture class="aspect-square size-56 flex-none"> 
                 <img    
@@ -47,5 +48,9 @@ const playlistSongs = songs.filter((song) => song.albumId === playlist?.albumId)
         <div class="absolute inset-0 bg-gradient-to-t from-zinc-900 via-zinc-900/80 -z-10">
 
         </div>
+
+        <section class="p-6">
+            <SongsTable songs={playlistSongs} client:load/>
+          </section>
 	</div>
 </Layout>
